# mcstructure-cpp

./: .gitmodules  CMakeLists.txt
include/: BlockState.h  Coordinate.h  Size.h  Structure.h
lib/: CMakeLists.txt
src/: BlockState.cpp  Structure.cpp
tests/: CMakeLists.txt
tests/structure_parsing/: CMakeLists.txt  main.cpp  test.mcstructure
